# truck_simulation

./: .clang-format  CMakeLists.txt  DESIGN.md  Makefile  NOTES.md  README.md
hdr/: event.hpp  helper.hpp  sim_time.hpp  station.hpp  stats.hpp  truck.hpp  truck_simulation.hpp
lib/: truck_simulation.cpp
src/: main.cpp
tests/: simulation_test.cpp  test_event.cpp  test_mining_truck.cpp  test_station_stats.cpp  test_truck_stats.cpp  test_unload_station.cpp
